Readded Draw job and Draw frequency, added cov graph. Changed Package names and updated README